--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 jobs:
   include:
   - language: java
-    jdk: openjdk11
+    jdk: openjdk8
     cache: 
       directories:
         - $HOME/.m2
     install: true
     script: mvn -B test  # mvn clean install would work, too
 
-    deploy:
-      cleanup: false
-      provider: heroku
-      api_key:
-        secure: ""
-      app: munkahelyi-nyilvantarto-rendsz
-    on: master
+    #deploy:
+    #  skip_cleanup: true
+    #  provider: releases
+    #  api_key: ""
+    #  app: munkahelyi-nyilvantarto-rendsz
+    #  on: main
