--- a/pom.xml
+++ b/pom.xml
@@ -44,23 +44,23 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <!--
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-        https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+        <!--https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
-        https://mvnrepository.com/artifact/com.auth0/java-jwt
+        <!--https://mvnrepository.com/artifact/com.auth0/java-jwt-->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.11.0</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -72,6 +72,12 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.4.1</version>
         </dependency>
     </dependencies>
 
