--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ spring.h2.console.path=/h2
 #spring.datasource.url=jdbc:h2:mem:issuedb
 spring.datasource.url=jdbc:h2:file:./fsdb
 
+#H2 t\u00e1voli el\u00e9r\u00e9s
+spring.h2.console.settings.web-allow-others=true
+
 #show sql statement
 logging.level.org.hibernate.SQL=debug
 
